--- a/src/main/resources/templates/Admin/UserBuyPet/list.html
+++ b/src/main/resources/templates/Admin/UserBuyPet/list.html
@@ -139,6 +139,9 @@
                 <a th:href="@{/admin/user-buy-pets/by-user/{id}(id=${user.id})}" class="btn btn-warning btn-sm">
                     <i class="fa-solid fa-list"></i>
                 </a>
+                <a th:href="@{/admin/room/action/user/{id}(id=${user.id})}" class="btn btn-warning btn-sm">
+                    Tư vấn
+                </a>
             </td>
         </tr>
         </tbody>
